--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "43ac2111",
    "metadata": {},
    "outputs": [],
    "source": [
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium import webdriver"
    ]
   },
   {
@@ -17,15 +19,7 @@
    "execution_count": 2,
    "id": "b949b2ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Downloading: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 6.46M/6.46M [00:00<00:00, 19.1MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set up Splinter\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
